2015-03-08  Benno Schulenberg  <bensberg@justemail.net>
	* src/proto.h, src/nano.c: Fix compilation with --enable-tiny plus
	--enable-nanorc.

2015-03-07  Benno Schulenberg  <bensberg@justemail.net>
	* doc/man/nanorc.5, doc/texinfo/nano.texi: Add a note about the
	inherent imperfection of using regular expressions for syntax
	highlighting, as suggested by Mike Frysinger in bug #30962.
	* doc/man/nanorc.5: Improve the indentation of some lists.
	* doc/man/nanorc.5, doc/texinfo/nano.texi: Remove the mistaken
	square brackets around the arguments of "header" and "magic" --
	those arguments are not optional.  Also add "formatter" to the
	texinfo document, and slightly improve its punctuation.

GNU nano 2.3.99pre2 - 2015.02.27
2015-02-25  Chris Allegretta <chrisa@asty.org>
	* src/rcfile.c (parse_binding): Add an exception for do_toggle() as
	rebinding toggles broke with r5022.

2015-02-21  Benno Schulenberg  <bensberg@justemail.net>
	* README: Fix the explanation of how to subscribe to a mailing list.
	* doc/syntax/{java,lua,python,ruby}.nanorc: Wrap some overlong lines.

2015-02-18  Mike Frysinger  <vapier@gentoo.org>
	* doc/syntax/sh.nanorc: Recognize also dash, openrc and runscript.

2015-02-16  Mike Frysinger  <vapier@gentoo.org>
	* .gitignore: Ignore the autotools 'compile' file.

2015-02-15  Benno Schulenberg  <bensberg@justemail.net>
	* src/file.c (do_lockfile): Also show the name of the affected file
	when finding a lock file, for when many files are opened at once.
	* src/file.c (do_lockfile): The user does the editing, not the editor.

2015-02-09  Chris Allegretta <chrisa@asty.org>
	* nano.spec.in: Add dependency on texinfo, docdir files for
	RPM file creation.

GNU nano 2.3.99pre2 - 2015.02.06
2015-02-03  Alex Henrie  <alexhenrie24@gmail.com>
	* src/cut.c (do_cut_text): Make sure to set modified even when
	using --enable-tiny.

2015-02-01  Kamil Dudka  <kdudka@redhat.com>
	* src/files.c (write_lockfile): Avoid writing uninitialized bytes to