@@ -1,6 +1,7 @@
 2015-03-08  Benno Schulenberg  <bensberg@justemail.net>
 	* src/proto.h, src/nano.c: Fix compilation with --enable-tiny plus
 	--enable-nanorc.
+	* src/rcfile.c (parse_binding): Fix the rebinding of toggles.
 
 2015-03-07  Benno Schulenberg  <bensberg@justemail.net>
 	* doc/man/nanorc.5, doc/texinfo/nano.texi: Add a note about the
@@ -15,7 +16,7 @@
 GNU nano 2.3.99pre2 - 2015.02.27
 2015-02-25  Chris Allegretta <chrisa@asty.org>
 	* src/rcfile.c (parse_binding): Add an exception for do_toggle() as
-	rebinding toggles broke with r5022.
+	rebinding toggles broke with r5022.  (Fixed in r5134.)
 
 2015-02-21  Benno Schulenberg  <bensberg@justemail.net>
 	* README: Fix the explanation of how to subscribe to a mailing list.
